--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Parallax Header Image -->
   <div class="parallax-wrapper">
     <div class="cover" data-scrollax="properties: { 'translateY': '48%' }">
-      <img src="/images/header-image.jpg" alt="Sera - One Page Template by Gleesik Wallpaper" />
+      <img src="/images/header-image.jpg" alt="Winter Fox" />
     </div>
   </div>
 
@@ -57,7 +57,7 @@
           <ul class="menu">
             <li class="current-menu-item"><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#features">For Us</a></li>
+            <li><a href="#features">From Us</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#testimonials">With Us</a></li>
             <li><a href="#blog">Blog</a></li>
@@ -117,7 +117,7 @@
 
       <!-- Section Content -->
       <div class="col-md-8 col-md-push-2 col-sm-12 section-content">
-        <p>We provide a painless experience by focusing primarily on client communication. Come look through the glass at <span class="wifo-span">WinterFox</span> to see the future that we will build for you.</p>
+        <p>We provide a painless experience by focusing primarily on client communication. Come look through the glass at <span class="wifo-span">Winter Fox</span> to see the future that we will build for you.</p>
       </div>
 
     </div>
@@ -619,7 +619,7 @@
           <div class="testimonial-face">
 
             <div class="face">
-              <img src="/images/avatars/avatar-01.jpg" alt="Sera Avatar Image" />
+              <img src="/images/avatars/avatar-01.jpg" alt="Winter Fox" />
             </div>
 
             <div class="info">
@@ -646,7 +646,7 @@
           <div class="testimonial-face">
 
             <div class="face">
-              <img src="/images/avatars/avatar-02.jpg" alt="Sera Avatar Image" />
+              <img src="/images/avatars/avatar-02.jpg" alt="Winter Fox" />
             </div>
 
             <div class="info">
@@ -673,7 +673,7 @@
           <div class="testimonial-face">
 
             <div class="face">
-              <img src="/images/avatars/avatar-03.jpg" alt="Sera Avatar Image" />
+              <img src="/images/avatars/avatar-03.jpg" alt="Winter Fox" />
             </div>
 
             <div class="info">
@@ -700,7 +700,7 @@
           <div class="testimonial-face">
 
             <div class="face">
-              <img src="/images/avatars/avatar-04.jpg" alt="Sera Avatar Image" />
+              <img src="/images/avatars/avatar-04.jpg" alt="Winter Fox" />
             </div>
 
             <div class="info">
@@ -1158,7 +1158,7 @@
       <div class="col-md-6 col-md-push-3 footer-info text-center">
 
         <div class="footer-logo">
-          <img src="/images/logo-focus.svg" width="140" alt="Sera - OnePage Logo by Gleesik" />
+          <img src="/images/logo-focus.svg" width="140" alt="Winter Fox" />
         </div>
 
         <div class="footer-info-text">
