--- a/index.html
+++ b/index.html
@@ -1060,7 +1060,7 @@
             <!-- Plan Content -->
             <div class="plan-content">
               <h4 class="feature-title"><i class="pe-7s-check check"></i>Project Estimate</h4>
-              <p class="feature-content">We go over any and every detail for your project to ensure that there is no miscommunication.</p>
+              <p class="feature-content">We go over any and every detail for your project to ensure there is no miscommunication.</p>
               <hr class="separator">
               <h4 class="feature-title"><i class="pe-7s-check check"></i>Project Invoice</h4>
               <p class="feature-content">We provide a written invoice explaining hours and technical specifications.</p>
